# ESP32-S3-RLCD-4.2

./: .gitignore  README.md
02_Example/ESP-IDF/03_ADC_Test/components/user_app/: user_app.cpp
02_Example/ESP-IDF/04_I2C_PCF85063/components/user_app/: user_app.cpp
02_Example/ESP-IDF/05_I2C_SHTC3/components/user_app/: user_app.cpp
02_Example/ESP-IDF/06_SD_Card/components/user_app/: user_app.cpp
02_Example/ESP-IDF/07_Audio_Test/components/user_app/: user_app.cpp
02_Example/ESP-IDF/09_LVGL_V9_Test/components/user_app/: user_app.cpp
02_Example/ESP-IDF/10_FactoryProgram/: partitions.csv  sdkconfig  sdkconfig.defaults
02_Example/ESP-IDF/10_FactoryProgram/components/app_bsp/: CMakeLists.txt  esp_wifi_bsp.c  esp_wifi_bsp.h  lvgl_bsp.cpp  lvgl_bsp.h  news_service.c  news_service.h  weather_service.c  weather_service.h
02_Example/ESP-IDF/10_FactoryProgram/components/port_bsp/: CMakeLists.txt  button_bsp.c  display_bsp.cpp  display_bsp.h
02_Example/ESP-IDF/10_FactoryProgram/components/user_app/: CMakeLists.txt  user_app.cpp
02_Example/ESP-IDF/10_FactoryProgram/main/: main.cpp
