idf_component_register(
    SRCS
    "lvgl_bsp.cpp"
    "ble_scan_bsp.c"
    "esp_wifi_bsp.c"
    "news_service.c"
    "weather_service.c"
    PRIV_REQUIRES
    esp_wifi
    esp_event
    nvs_flash
    ui_bsp
    espressif__avi_player
    espressif__esp_new_jpeg
    port_bsp
    esp_timer
    esp_http_client
    mbedtls
    json
    REQUIRES
    bt
    lvgl__lvgl
    INCLUDE_DIRS 
    "./")
